Fixed alignment styling issue on applicant modal

--- a/react_app/src/containers/Applicants/style.css
+++ b/react_app/src/containers/Applicants/style.css
@@ -41,5 +41,14 @@
 }
 
 .inlineList {
-  display: inline;
+  float: left;
+  list-style-type: none;
+}
+
+.inlineBox {
+  margin: 10px;
+}
+
+.modal-body {
+  display: flex;
 }
